Fix horizontal scrollbar appearing in clikes dropdown

--- a/styles/shared/comment-likes.scss
+++ b/styles/shared/comment-likes.scss
@@ -134,7 +134,7 @@
   z-index: 2;
   color: #898989;
   border: 1px solid #898989;
-  padding: 6px;
+  padding: 6px 17px 6px 6px;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
   white-space: nowrap;
   text-align: left;
